--- a/advo/package.json
+++ b/advo/package.json
@@ -12,14 +12,15 @@
     "chromatic": "npx chromatic --project-token=chpt_e29c7fe53e0a3a7"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.408.0",
@@ -43,6 +44,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -53,9 +55,9 @@
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.40",
+    "prisma": "^5.17.0",
     "storybook": "^8.2.6",
     "tailwindcss": "^3.4.7",
-    "prisma": "^5.17.0",
     "typescript": "^5"
   }
 }
