--- a/advo/tsconfig.json
+++ b/advo/tsconfig.json
@@ -1,13 +1,24 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
+    // "outDir": "build",
+    "target": "esnext",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "rootDir": "./",
+    "allowJs": false,
+    "alwaysStrict": true,
     "skipLibCheck": true,
+    "declaration": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -18,10 +29,31 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "&/*": ["./src/interfaces/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "&/*": [
+        "./src/interfaces/*"
+      ],
+      "$/*": [
+        "./src/assets/*"
+      ],
+      "#/*": [
+        "./src/components"
+      ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "types": [
+    "node",
+    "jest"
+  ]
 }
