--- a/advo/.eslintrc.json
+++ b/advo/.eslintrc.json
@@ -1,9 +1,14 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "plugin:storybook/recommended"
+    "plugin:storybook/recommended",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
   ],
   "rules": {
+    "prettier/prettier": "error",
     "semi": [
       "error",
       "always"
