--- a/advo/package.json
+++ b/advo/package.json
@@ -12,8 +12,8 @@
     "chromatic": "npx chromatic --project-token=chpt_e29c7fe53e0a3a7"
   },
   "dependencies": {
-    "@prisma/client": "^5.17.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
@@ -48,14 +48,17 @@
     "@types/react-dom": "^18",
     "chromatic": "^11.5.6",
     "cypress": "^13.13.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "postcss": "^8.4.40",
+    "prettier": "^3.3.3",
+    "prisma": "^5.17.0",
     "storybook": "^8.2.6",
     "tailwindcss": "^3.4.7",
-    "prisma": "^5.17.0",
     "typescript": "^5"
   }
 }
