--- a/advo/tsconfig.json
+++ b/advo/tsconfig.json
@@ -39,7 +39,7 @@
         "./src/assets/*"
       ],
       "#/*": [
-        "./src/components"
+        "./src/components/*"
       ]
     }
   },
