--- a/advo/package.json
+++ b/advo/package.json
@@ -49,6 +49,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "chromatic": "^11.5.6",
     "cypress": "^13.13.1",
     "eslint": "^8.57.0",
