--- a/advo/.eslintrc.json
+++ b/advo/.eslintrc.json
@@ -27,6 +27,7 @@
     "no-unused-vars": "warn",
     "no-console": "off",
     "@typescript-eslint/no-explicit-any": "error",
+    "@typescript-eslint/no-empty-object-type": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
