--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.408.0",
+    "mongodb": "^6.12.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18.3.1",
