--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pg": "prisma generate"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.16.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -34,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.1",
     "@reduxjs/toolkit": "^2.6.1",
+    "@types/nodemailer": "^6.4.17",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.19",
@@ -48,6 +50,7 @@
     "mongodb": "^5.9.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
